feat: check files from ECDC with 2 extensions: xls and xlsx

--- a/daily_geographic_distribution_of_covid_19_cases_worldwide.ipynb
+++ b/daily_geographic_distribution_of_covid_19_cases_worldwide.ipynb
@@ -7,7 +7,7 @@
       "display_name": "Python 3"
     },
     "colab": {
-      "name": "daily_geographic_distribution_of_covid-19_cases_worldwide-v0.0.3.ipynb",
+      "name": "daily_geographic_distribution_of_covid-19_cases_worldwide-v0.0.4.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
@@ -267,10 +267,9 @@
       "source": [
         "# Display charts about the geographic distribution of COVID-19 cases worldwide\n",
         "\n",
+        "> Data source is \"today’s data on the geographic distribution of COVID-19 cases worldwide\": http://bit.ly/2U9YcGS\n",
         "\n",
-        "> ECDC Dashboard : http://bit.ly/38Ysgum\n",
-        "\n",
-        "> Data source is \"today’s data on the geographic distribution of COVID-19 cases worldwide\": http://bit.ly/2U9YcGS"
+        "> ECDC Dashboard : http://bit.ly/38Ysgum"
       ]
     },
     {
@@ -279,11 +278,11 @@
         "trusted": true,
         "id": "qie5vCvOGQNr",
         "colab_type": "code",
+        "outputId": "3ec79ee8-4bfd-4ae1-a825-243f855668a7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        },
-        "outputId": "1427755e-b502-4bc8-d596-83b80e44cdfc"
+        }
       },
       "source": [
         "# setup the python program\n",
@@ -341,7 +340,7 @@
         "  except urllib.error.HTTPError as e:\n",
         "      # Return code error (e.g. 404, 501, ...)\n",
         "      # ...\n",
-        "      print('HTTPError: {}'.format(e.code))\n",
+        "      print('HTTPError: {}, the file does not exist'.format(e.code))\n",
         "      url_exists = False\n",
         "  except urllib.error.URLError as e:\n",
         "      # Not an HTTP-specific error (e.g. connection refused)\n",
@@ -353,7 +352,7 @@
         "      # ...\n",
         "      print('The url exists')\n",
         "      url_exists = True\n",
-        "  return url_exists"
+        "  return (url_exists), url"
       ],
       "execution_count": 0,
       "outputs": []
@@ -377,19 +376,19 @@
         "  \"\"\"\n",
         "  is_found=False\n",
         "  i=-1\n",
-        "  latest_datasource_date = (datetime.now() - timedelta(i)).strftime('%Y-%m-%d')\n",
         "  while is_found == False and i<5:\n",
         "    i += 1\n",
         "    latest_datasource_date = (datetime.now() - timedelta(i)).strftime('%Y-%m-%d')\n",
-        "    \n",
         "    datasource_url = url.replace('%latest_datasource_date%', latest_datasource_date)\n",
         "    print(f'Search for this latest date: {latest_datasource_date}',\n",
         "          f'datasource_url: {datasource_url}')\n",
-        "    is_found = check_if_data_source_exists(datasource_url)\n",
+        "    is_found, existing_datasource_date = check_if_data_source_exists(datasource_url + \".xls\")\n",
+        "    if is_found == False:\n",
+        "      is_found, existing_datasource_date = check_if_data_source_exists(datasource_url + \".xlsx\")\n",
         "\n",
         "  if is_found == True:\n",
         "    print(f'Download the data until : {latest_datasource_date}')\n",
-        "    return datasource_url\n",
+        "    return existing_datasource_date\n",
         "  else:\n",
         "    return None"
       ],
@@ -401,28 +400,32 @@
       "metadata": {
         "id": "6eIOpLa3oAUp",
         "colab_type": "code",
-        "outputId": "0e0d5dd1-ed9e-4e6a-e0c2-1313a96ef3a0",
+        "outputId": "d079979a-18be-48af-e0c5-42f790da03f3",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 93
+          "height": 168
         }
       },
       "source": [
         "# load the data\n",
-        "datasource_url_template = \"https://www.ecdc.europa.eu/sites/default/files/documents/COVID-19-geographic-disbtribution-worldwide-%latest_datasource_date%.xls\"\n",
+        "datasource_url_template = \"https://www.ecdc.europa.eu/sites/default/files/documents/COVID-19-geographic-disbtribution-worldwide-%latest_datasource_date%\"\n",
         "if datasource_url_template is None:\n",
         "  print(f'There is no datasource on the ECDC website. is https://www.ecdc.europa.eu down?')\n",
         "  exit\n",
         "datasource_url = find_latest_datasource(datasource_url_template)"
       ],
-      "execution_count": 4,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Search for this latest date: 2020-03-18 datasource_url: https://www.ecdc.europa.eu/sites/default/files/documents/COVID-19-geographic-disbtribution-worldwide-2020-03-18.xls\n",
+            "Search for this latest date: 2020-03-21 datasource_url: https://www.ecdc.europa.eu/sites/default/files/documents/COVID-19-geographic-disbtribution-worldwide-2020-03-21\n",
+            "HTTPError: 404, the file does not exist\n",
+            "HTTPError: 404, the file does not exist\n",
+            "Search for this latest date: 2020-03-20 datasource_url: https://www.ecdc.europa.eu/sites/default/files/documents/COVID-19-geographic-disbtribution-worldwide-2020-03-20\n",
+            "HTTPError: 404, the file does not exist\n",
             "The url exists\n",
-            "Download the data until : 2020-03-18\n"
+            "Download the data until : 2020-03-20\n"
           ],
           "name": "stdout"
         }
@@ -457,7 +460,7 @@
       "metadata": {
         "id": "6_r-FL0vQuZm",
         "colab_type": "code",
-        "outputId": "b4c0f348-ab1b-4b79-88af-55c7ce436235",
+        "outputId": "01a02d02-0a59-43ed-c47f-722ddf67ade3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 73
@@ -473,14 +476,14 @@
         "    f'end date : {end_date}'\n",
         "      )"
       ],
-      "execution_count": 6,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "DATE RANGE:\n",
             " start date : Dec 31 2019\n",
-            " end date : Mar 18 2020\n"
+            " end date : Mar 20 2020\n"
           ],
           "name": "stdout"
         }
@@ -501,7 +504,7 @@
       "metadata": {
         "id": "xm6f2_Bnev4Q",
         "colab_type": "code",
-        "outputId": "83852c6a-9cda-42b0-ef8c-7c4ec397de57",
+        "outputId": "43a9de34-06dd-4460-f0a1-0cdc463adb07",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 73
@@ -513,14 +516,14 @@
         "Total_deaths = cv19_countries_day.groupby('DateRep').sum()[['Cases','Deaths']].sum()['Deaths']\n",
         "print(f\"{end_date}:\\n Total Confirmed Cases: {Total_confirmed:n}\\n Total Deaths: {Total_deaths:n}\")"
       ],
-      "execution_count": 7,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Mar 18 2020:\n",
-            " Total Confirmed Cases: 194,909\n",
-            " Total Deaths: 7,876\n"
+            "Mar 20 2020:\n",
+            " Total Confirmed Cases: 242,476\n",
+            " Total Deaths: 9,885\n"
           ],
           "name": "stdout"
         }
@@ -541,7 +544,7 @@
       "metadata": {
         "id": "NTEPU7CBRUsJ",
         "colab_type": "code",
-        "outputId": "de293d87-130e-4ee7-dd22-2b75d26eebcc",
+        "outputId": "3dacca46-78bd-43f4-b507-f93c6fa77198",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 335
@@ -552,7 +555,7 @@
         "print(f'WW New Confirmed cases first-5 records:\\n\\n {cv19_countries_day_new_confirmed_cases.head(5)}')\n",
         "print(f'\\nWW New Confirmed cases last-5 records:\\n\\n {cv19_countries_day_new_confirmed_cases.tail(5)}')"
       ],
-      "execution_count": 8,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -569,11 +572,11 @@
             "WW New Confirmed cases last-5 records:\n",
             "\n",
             "       DateRep  Cases\n",
-            "74 2020-03-14   9375\n",
-            "75 2020-03-15   8140\n",
             "76 2020-03-16  16051\n",
             "77 2020-03-17  12745\n",
-            "78 2020-03-18  14750\n"
+            "78 2020-03-18  14750\n",
+            "79 2020-03-19  18345\n",
+            "80 2020-03-20  29222\n"
           ],
           "name": "stdout"
         }
@@ -605,7 +608,7 @@
         "print(f'WW New Deaths first-5 records:\\n\\n {cv19_countries_day_new_deaths.head(5)}')\n",
         "print(f'nWW New Deaths last-5 records:\\n\\n {cv19_countries_day_new_deaths.tail(5)}')"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -681,7 +684,7 @@
         "fig = go.Figure(data=data, layout=layout)\n",
         "iplot(fig)\n"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -759,6 +762,7 @@
       "metadata": {
         "id": "FJGAMAQBEd8Z",
         "colab_type": "code",
+        "outputId": "21480db7-da21-433f-a223-4198b38326f0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 188,
@@ -767,8 +771,7 @@
             "2387db7780b24924adfebc8247eae90f",
             "4c83649853f24b9d8a58d96669dad360"
           ]
-        },
-        "outputId": "21480db7-da21-433f-a223-4198b38326f0"
+        }
       },
       "source": [
         "countries = ['China', 'Belgium', 'Spain', 'France', 'Italy', 'United_States_of_America']\n",
@@ -786,7 +789,7 @@
         "except:\n",
         "  print('you are not running a jupyter notebook')"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -811,11 +814,11 @@
       "metadata": {
         "id": "925R89IjE_oL",
         "colab_type": "code",
+        "outputId": "6810b5b4-06e9-48cc-96d3-4c8785be1e6a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        },
-        "outputId": "6810b5b4-06e9-48cc-96d3-4c8785be1e6a"
+        }
       },
       "source": [
         "if countries_widget is not None:\n",
@@ -824,7 +827,7 @@
         "      \n",
         "print(f'Selected countries : {countries}')"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -907,11 +910,11 @@
       "metadata": {
         "id": "skB83-UgMquJ",
         "colab_type": "code",
+        "outputId": "7b27df74-56e8-463f-c93f-0f508a8a6a4a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "7b27df74-56e8-463f-c93f-0f508a8a6a4a"
+        }
       },
       "source": [
         "display_bar_chart(\n",
@@ -931,7 +934,7 @@
         "    layout_y_title='New deaths'\n",
         "    )"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1152,7 +1155,7 @@
         "for country in countries:\n",
         "  display_correlation(df[df['Countries and territories']==country], country, method='pearson')\n"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
